--- a/package.json
+++ b/package.json
@@ -25,17 +25,21 @@
     "build": "microbundle build",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "commit": "./node_modules/.bin/git-cz"
+    "commit": "./node_modules/.bin/git-cz",
+    "prepare": "npm run build",
+    "precommit": "lint-staged",
+    "prepublish": "npm run test && npm run build"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx}": [
-      "npm run eslint:fix",
-      "git add"
-    ],
-    "src/**/*.{js,jsx,json,css}": [
+    "src/**/*.js": [
       "prettier --config .prettierrc --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   },
   "repository": {
     "type": "git",
@@ -85,8 +89,10 @@
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^5.4.0",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
+    "lint-staged": "^10.2.9",
     "microbundle": "^0.12.0",
     "prettier": "^1.14.2",
     "raf": "^3.4.0"
