chore(package.json): renamed package to @viveknayyar/re-promise as npm was not allowing to publish
renamed package to @viveknayyar/re-promise as npm was not allowing to publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "re-promise",
+  "name": "@viveknayyar/re-promise",
   "version": "0.0.1",
   "description": "Retry failed api calls with a backoff time",
   "keywords": [
