--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viveknayyar/re-promise",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Retry failed api calls with a backoff time",
   "keywords": [
     "retry-promise",
@@ -10,7 +10,8 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "browser": "dist/index.bundle.js",
+  "esmodule": "dist/foo.modern.js",
+  "unpkg": "dist/index.umd.js",
   "files": [
     "dist",
     "README.md"
